--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,9 @@ body {
   opacity: 1;
   cursor: pointer;
 }
+path.current-floor {
+  opacity: 1;
+}
 .counter-group {
   display: flex;
   flex-direction: column;
